[package]
name = "bookwerx-core-rust"
version = "2.3.0" #  VERSION
authors = ["Thomas Radloff <bostontrader@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.2" # 2020-Aug
mysql = "16.0.2"
rand = "0.7.3" # 2020-Aug
rocket = "0.4.5" # 2020-May

# The existing versions of rocket_cors and rocket_contrib have incompatible dependency requirements regarding their mutual dependency 'regex'. I have resolved this by forking rocket_cors and tweaking the regex version.
#rocket_cors = "0.5.2" # 2020-Mar
rocket_cors = { git = "https://github.com/bostontrader/rocket_cors", branch = "downgrade-regex" }
#rust_decimal = "1.0.1"
serde = {version = "1.0.112", features = ["derive"]} # 2020-Jun
serde_json = "1.0.55" # 2020-Jun

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json","mysql_pool"]
